<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.kepaladesa.layananperdatadantatausahanegara.HukumLainActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_bg_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:src="@drawable/bg_appbar_green"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bg_appbar_green" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:src="@drawable/ic_back"
        app:layout_constraintBottom_toBottomOf="@id/iv_bg_appbar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:gravity="center"
        android:text="@string/tindakan_hukum_lain"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/iv_bg_appbar"
        app:layout_constraintLeft_toRightOf="@+id/iv_back"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_bg_appbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_title_deskripsi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:text="@string/deskripsi"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_content_deskripsi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="32dp"
                android:text="@string/deskripsi_tindakan_hukum_lain"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@id/tv_title_deskripsi" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_title_ketentuan_pelayanan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:text="@string/ketentuan_pelayanan"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_content_deskripsi" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_content_ketentuan_pelayanan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="32dp"
                android:text="@string/content_ketentuan_pelayanan"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@id/tv_title_ketentuan_pelayanan" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/tv_content_ketentuan_pelayanan">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_title_input_data_pelayanan_hukum_lain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/input_data_tindakan_hukum_lain"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_title_nama_lengkap"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="14dp"
                    android:layout_marginEnd="32dp"
                    android:text="@string/nama_lengkap_anda"
                    android:textColor="@color/black" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_nama_lengkap"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="32dp"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/bg_form"
                    android:hint=""
                    android:inputType="text"
                    android:padding="12dp"
                    android:textSize="14sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_title_alamat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="14dp"
                    android:layout_marginEnd="32dp"
                    android:text="@string/alamat_anda"
                    android:textColor="@color/black" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_alamat"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="32dp"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/bg_form"
                    android:hint=""
                    android:inputType="text"
                    android:padding="12dp"
                    android:textSize="14sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_title_nomor_hp_wa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="14dp"
                    android:layout_marginEnd="32dp"
                    android:text="@string/nomor_hp_wa"
                    android:textColor="@color/black" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_nomor_hp_wa"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="32dp"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/bg_form"
                    android:hint=""
                    android:inputType="number"
                    android:padding="12dp"
                    android:textSize="14sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_title_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="14dp"
                    android:layout_marginEnd="32dp"
                    android:text="@string/email"
                    android:textColor="@color/black" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="32dp"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/bg_form"
                    android:hint=""
                    android:inputType="textEmailSubject"
                    android:padding="12dp"
                    android:textSize="14sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_title_kategori"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="14dp"
                    android:layout_marginEnd="32dp"
                    android:text="@string/kategori"
                    android:textColor="@color/black" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_kategori"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="32dp"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/bg_form"
                    android:hint=""
                    android:inputType="text"
                    android:padding="12dp"
                    android:textSize="14sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_title_data_permasalahan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/data_permasalahan"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_title_bentuk_permasalahan_hukum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="14dp"
                    android:layout_marginEnd="32dp"
                    android:text="@string/bentuk_permasalahan_hukum"
                    android:textColor="@color/black" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_bentuk_permasalahan_hukum"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="32dp"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/bg_form"
                    android:hint=""
                    android:inputType="text"
                    android:padding="12dp"
                    android:textSize="14sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_title_detail_permasalahan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="14dp"
                    android:layout_marginEnd="32dp"
                    android:text="@string/detail_permasalahan"
                    android:textColor="@color/black" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_detail_permasalahan"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="32dp"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/bg_form"
                    android:gravity="top"
                    android:hint=""
                    android:inputType="textMultiLine"
                    android:minLines="5"
                    android:padding="12dp"
                    android:textSize="14sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_title_dokumen_terkait"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="14dp"
                    android:layout_marginEnd="32dp"
                    android:text="@string/dokumen_terkait"
                    android:textColor="@color/black" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="32dp"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/bg_form">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_pilih_file_dokumen_terkait"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:backgroundTint="@color/gray_90"
                        android:text="@string/pilih_file"
                        android:textAllCaps="false"
                        android:textColor="@color/black"
                        android:textSize="11sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_keterangan_form_file_dokumen_terkait"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:text="@string/tidak_ada_file_yang_dipilih"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toRightOf="@+id/btn_pilih_file_dokumen_terkait"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_title_upload_ktp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="14dp"
                    android:layout_marginEnd="32dp"
                    android:text="@string/upload_ktp"
                    android:textColor="@color/black" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="32dp"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/bg_form">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_pilih_file_ktp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:backgroundTint="@color/gray_90"
                        android:text="@string/pilih_file"
                        android:textAllCaps="false"
                        android:textColor="@color/black"
                        android:textSize="11sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_keterangan_form_file_ktp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:text="@string/tidak_ada_file_yang_dipilih"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toRightOf="@+id/btn_pilih_file_ktp"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_kirim_data"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="32dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="32dp"
                    android:paddingVertical="16dp"
                    android:text="@string/kirim_data"
                    android:textAllCaps="false"
                    app:cornerRadius="12dp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>