<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_95"
    tools:context=".view.login.LoginActivity">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_bg_kejari_luwu_timur"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:layout_marginTop="-16dp"
        android:layout_marginBottom="120sp"
        app:cardCornerRadius="18dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_kejaksaan"
            android:padding="32dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_name_kejari_luwu_timur"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="64dp"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_address_kejari_luwu_timur"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/slogan_kejari_luwu_timur"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintTop_toBottomOf="@id/tv_name_kejari_luwu_timur" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:background="@color/gray_95"
        app:layout_constraintTop_toBottomOf="@id/cv_bg_kejari_luwu_timur"
        app:tabGravity="fill"
        app:tabIndicatorColor="@color/green_40"
        app:tabIndicatorGravity="bottom"
        app:tabMode="fixed"
        app:tabSelectedTextColor="@color/green_40"
        app:tabTextAppearance="@style/CustomTabAppearance"
        app:tabTextColor="@color/green_90">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kepala_desa" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/admin" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_container_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        app:layout_constraintTop_toBottomOf="@+id/tab_layout_login" />

</androidx.constraintlayout.widget.ConstraintLayout>